@startuml

title __TASK's Class Diagram__\n

  package taskman {
    package taskman.backend {
      package taskman.backend.task {
        class Task {
            - name : String
            - description : String
            - estimatedDuration : long
            - acceptableDeviation : double
            - dependencies : ArrayList<Task>
            + Task()
            + getName()
            - setName()
            + getDescription()
            - setDescription()
            + getEstimatedDuration()
            - setEstimatedDuration()
            + getAcceptableDeviation()
            - setAcceptableDeviation()
            + getTimeSpan()
            # setTimeSpan()
            - setTimeSpan()
            + getState()
            # setState()
            + getStatus()
            + canBePlanned()
            + canBeUpdated()
            + endExecution()
            + makeExecuting()
            + isAvailable()
            + isFinished()
            + getDelay()
            + getAlternative()
            # setAlternativeTask()
            + setAlternative()
            + getDependencies()
            # addDependencyTask()
            + addDependency()
            + removeDependency()
            + getPlan()
            + initializePlan()
            + getPlannedResources()
            + getAlternativeResources()
            + changeResource()
            + cancelPlan()
            + addRequirement()
            {static} # containsLoop()
            + hasAccessTo()
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.task {
        abstract class TaskState {
            - status : String
            + getStatus()
            # setStatus()
            + canBePlanned()
            + canBeUpdated()
            + getDelay()
            + execute()
            + endExecution()
            + setAlternative()
            + addDependency()
            + addRequirement()
            + isAvailable()
            + isFinished()
            + initializePlan()
            + getPlannedResources()
            + getAlternativeResources()
            + changeResource()
            + cancelPlan()
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.task {
        class TaskStateExecuting {
            + TaskStateExecuting()
            + endExecution()
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.task {
        class TaskStateFailed {
            + TaskStateFailed()
            + setAlternative()
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.task {
        class TaskStateFinished {
            + TaskStateFinished()
            + isFinished()
            + getDelay()
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.task {
        class TaskStatePlanned {
            + TaskStatePlanned()
            + canBeUpdated()
            + getPlannedResources()
            + getAlternativeResources()
            + changeResource()
            + cancelPlan()
            + execute()
            + isAvailable()
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.task {
        class TaskStateUnavailable {
            + TaskStateUnavailable()
            + addDependency()
            + canBePlanned()
            + addRequirement()
            + initializePlan()
        }
      }
    }
  }
  

  Task -up-|> TaskWrapper
  Task o-- TimeSpan : timeSpan
  Task o-- TaskState : state
  Task o-- Task : alternative
  Task o-- Plan : plan
  TaskStateExecuting -up-|> TaskState
  TaskStateFailed -up-|> TaskState
  TaskStateFinished -up-|> TaskState
  TaskStatePlanned -up-|> TaskState
  TaskStateUnavailable -up-|> TaskState


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
